--- a/Booking (Eksamen).csproj
+++ b/Booking (Eksamen).csproj
@@ -7,4 +7,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\WeatherService\WeatherService.csproj" />
+  </ItemGroup>
+
 </Project>
